feat: build api update favorites property
