# src/models/favoriteproperties.js
@@ -2,7 +2,10 @@ const { Model } = require('sequelize')
 
 module.exports = (sequelize, DataTypes) => {
     class FavoriteProperties extends Model {
-        static associate(models) {}
+        static associate(models) {
+            FavoriteProperties.hasOne(models.Properties, { foreignKey: 'propertyId' })
+            FavoriteProperties.belongsTo(models.Users, { foreignKey: 'userId' })
+        }
     }
     FavoriteProperties.init(
         {
@@ -11,6 +14,26 @@ module.exports = (sequelize, DataTypes) => {
                 autoIncrement: true,
                 primaryKey: true,
                 type: DataTypes.INTEGER
+            },
+            userId: {
+                type: DataTypes.INTEGER,
+                references: {
+                    model: 'Users',
+                    key: 'userId'
+                },
+                onUpdate: 'CASCADE',
+                onDelete: 'CASCADE',
+                allowNull: false
+            },
+            propertyId: {
+                type: DataTypes.INTEGER,
+                references: {
+                    model: 'Properties',
+                    key: 'propertyId'
+                },
+                onUpdate: 'CASCADE',
+                onDelete: 'CASCADE',
+                allowNull: false
             }
         },
         {
